# deadline-cloud-for-houdini

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  depsBundle.sh  deps_bundle.py  deps_bundle.sh  hatch.toml  hatch_custom_hook.py  hatch_version_hook.py  pyproject.toml  requirements-release.txt  requirements-testing.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  doc.yml
.github/workflows/: code_quality.yml  e2e_test.yml  integ_test.yml  publish_release.yml  release.yml  release_publish.yml  reuse_python_build.yml
docs/: FAQ.md  user-guide.md
install_builder/: deadline-cloud-for-houdini.xml
scripts/: _project.py  add_copyright_headers.sh  build_wheels.bat  build_wheels.sh  create_adaptor_packaging_artifact.sh  deps_bundle.py  deps_bundle.sh  install_dev_submitter.py  install_dev_submitter.sh
src/deadline/houdini_adaptor/HoudiniAdaptor/: HoudiniAdaptor.json  __init__.py  __main__.py  adaptor.py
src/deadline/houdini_adaptor/HoudiniAdaptor/schemas/: init_data.schema.json  run_data.schema.json
src/deadline/houdini_adaptor/HoudiniClient/: houdini_client.py  houdini_handler.py
src/deadline/houdini_submitter/otls/deadline_cloud/: Sections.list
src/deadline/houdini_submitter/otls/deadline_cloud.hda/: INDEX__SECTION
src/deadline/houdini_submitter/otls/deadline_cloud.hda/Driver_1deadline__cloud/: CreateScript  DialogScript  ExtraFileOptions  IconSVG  OnCreated  PythonModule  Sections.list  Tools.shelf
src/deadline/houdini_submitter/otls/deadline_cloud/Driver_1deadline__cloud/: IconImage  OnCreated  PythonModule
src/deadline/houdini_submitter/python/: adaptor_override_environment.yaml  deadline_submitter_for_houdini.py
src/deadline/houdini_submitter/python/deadline_cloud_for_houdini/: _assets.py  adaptor_override_environment.yaml  queue_parameters.py  submitter.py
src/deadline_adaptor_for_houdini/HoudiniAdaptor/: HoudiniAdaptor.json  __main__.py  adaptor.py
src/deadline_adaptor_for_houdini/HoudiniClient/: __init__.py  houdini_client.py  houdini_handler.py
test/: __init__.py  test_copyright_headers.py
test/deadline_adaptor_for_houdini/unit/HoudiniAdaptor/: test_adaptor.py
test/deadline_adaptor_for_houdini/unit/HoudiniClient/: mock_hou.py  test_client.py  test_handler.py
test/deadline_submitter_for_houdini/unit/: __init__.py  conftest.py  mock_hou.py  shared_callback_tests.py  test_assets.py  test_job_template.py  test_login_callback.py  test_logout_callback.py  test_rops.py  test_settings_callback.py  test_submit_callback.py  test_update_queue_parameters_callback.py
